# Quatum-Tic-Tac-Toe

./: .gitignore  README.md
client-side-frontend/: README.md  package-lock.json  package.json
client-side-frontend/src/: index.css  index.js  index.scss
client-side-frontend/src/components/: Board.jsx  ToggleGroup.jsx
client-side-frontend/src/stylesheets/: App.scss  Buttons.css  Buttons.scss  Game.scss
client-side-frontend/src/views/: App.js  Game.js  Start.js
server-side-backend/: CMakeLists.txt  README.md
server-side-backend/headers/API/: CreateGameResourceFactory.hpp  GameResourceFactory.hpp  GameService.hpp  GameServiceSettingsFactory.hpp  IResourceFactory.hpp  IService.hpp  IServiceSettingsFactory.hpp  MakeMoveResourceFactory.hpp
server-side-backend/headers/Application/: Board.hpp  Entaglement.hpp  Entanglement.hpp  Game.hpp  GamesContainer.hpp  Sign.hpp  Tile.hpp
server-side-backend/source/: main.cpp
server-side-backend/source/API/: CreateGameResourceFactory.cpp  GameResourceFactory.cpp  GameService.cpp  GameServiceSettingsFactory.cpp  MakeMoveResourceFactory.cpp
server-side-backend/source/Application/: Board.cpp  Entaglement.cpp  Entanglement.cpp  Game.cpp  GamesContainer.cpp  Tile.cpp
